# sshthingy

./: .gitignore  connectiondialog.glade  createforwarding.glade  embedder.py  forwardings.glade  forwards.cpp  forwards.hpp  main.cpp  meson.build  readme.md  sftp.cpp  sftp.hpp  sftpwindow.glade  ssh_util.cpp  ssh_util.hpp  sshthingy.desktop  util.cpp  util.hpp
